--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,14 @@
           
         </div>
         <div id="palette" title="choose a color"></div>
-    
-        <i class="ri-delete-bin-line" id="clearBtn"></i>
-       <i id="eraser"class="ri-eraser-line"></i>
-       <i class="ri-pencil-line" id="pencil"></i>
-       <i class="ri-pen-nib-fill" id="prostokat"></i>
+        <div id="myDIV">
+        <i class="ri-delete-bin-line " id="clearBtn"></i>
+       <i id="eraser"class="ri-eraser-line btn"></i>
+       <i class="ri-pencil-line btn active" id="pencil"></i>
+       <i class="ri-pen-nib-fill btn" id="prostokat"></i>
        <i class="ri-download-2-line" id="download"></i>
        <i class="ri-hand-heart-fill" id="alert"></i>
+      </div>
       </div>
         <div id="counterDiv" onselectstart="return false" onselect="return false" oncopy="return false" ondragstart="return false" ondrag="return false">
           <span id="counter">0</span> użytk. <br />jest aktywnych.
